packages/ui/src/theme/css/component/select.scss
.amplify-select__wrapper {
  display: var(--amplify-components-select-wrapper-display);
  position: var(--amplify-components-select-wrapper-position);
  cursor: var(--amplify-components-select-wrapper-cursor);
}

.amplify-select__icon-wrapper {
  align-items: var(--amplify-components-select-icon-wrapper-align-items);
  position: var(--amplify-components-select-icon-wrapper-position);
  top: var(--amplify-components-select-icon-wrapper-top);
  right: var(--amplify-components-select-icon-wrapper-right);
  transform: var(--amplify-components-select-icon-wrapper-transform);
  pointer-events: var(--amplify-components-select-icon-wrapper-pointer-events);
}

.amplify-select {
  @extend %amplify-field-control;
  // default styles
  padding-inline-end: var(--amplify-components-select-padding-inline-end);
  min-width: var(--amplify-components-select-min-width);
  white-space: var(--amplify-components-select-white-space);

  &[data-size='small'] {
    min-width: var(--amplify-components-select-small-min-width);
  }
  &[data-size='large'] {
    min-width: var(--amplify-components-select-large-min-width);
  }
}

